[gd_scene load_steps=15 format=3 uid="uid://bgkum8vniin6y"]

[ext_resource type="Script" uid="uid://gdir5y2lx0ni" path="res://addons/CustomControls/Dialogs/pause_text_dialog.gd" id="1_7pbk2"]
[ext_resource type="PackedScene" uid="uid://bj48rsidmna6s" path="res://addons/CustomControls/custom_spin_box.tscn" id="2_afqty"]
[ext_resource type="Script" uid="uid://d0kowhkcjb7kv" path="res://addons/CustomControls/custom_option_button.gd" id="2_t5t8n"]
[ext_resource type="PackedScene" uid="uid://bnx7omk3joxly" path="res://addons/CustomControls/custom_button.tscn" id="3_mk0y2"]
[ext_resource type="Texture2D" uid="uid://xl88b63otgpi" path="res://addons/CustomControls/Images/button1_background.png" id="4_x2uuq"]
[ext_resource type="Texture2D" uid="uid://dqnnp323vr1vo" path="res://addons/CustomControls/Images/button1_background_hover.png" id="5_ssng5"]
[ext_resource type="Texture2D" uid="uid://beg6i1p118qd" path="res://addons/CustomControls/Images/button1_background_selected.png" id="6_p06er"]
[ext_resource type="Texture2D" uid="uid://bkfn4ru5noaaa" path="res://addons/CustomControls/Images/button1_background_disabled.png" id="7_f8cud"]

[sub_resource type="Gradient" id="Gradient_goivl"]
colors = PackedColorArray(0.184314, 0.2, 0.207843, 1, 0.278431, 0.294118, 0.301961, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_68rx3"]
gradient = SubResource("Gradient_goivl")
fill_from = Vector2(0.5, 1)
fill_to = Vector2(0.5, 0)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_brw25"]
texture = ExtResource("4_x2uuq")
texture_margin_left = 6.0
texture_margin_top = 6.0
texture_margin_right = 6.0
texture_margin_bottom = 6.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_62ti0"]
texture = ExtResource("5_ssng5")
texture_margin_left = 6.0
texture_margin_top = 6.0
texture_margin_right = 6.0
texture_margin_bottom = 6.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_wobpg"]
texture = ExtResource("6_p06er")
texture_margin_left = 6.0
texture_margin_top = 6.0
texture_margin_right = 6.0
texture_margin_bottom = 6.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_dbcns"]
texture = ExtResource("7_f8cud")
texture_margin_left = 6.0
texture_margin_top = 6.0
texture_margin_right = 6.0
texture_margin_bottom = 6.0

[node name="PauseTextDialog" type="Window"]
title = "Pause Text"
position = Vector2i(0, 36)
size = Vector2i(348, 137)
wrap_controls = true
transient = true
exclusive = true
unresizable = true
script = ExtResource("1_7pbk2")

[node name="Background" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_68rx3")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
text = "Type:"

[node name="Type" type="OptionButton" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "The text flow will pause for n seconds or until the player presses the action button (if the type is set to \"Wait for input\")."
mouse_default_cursor_shape = 2
item_count = 2
selected = 0
popup/item_0/text = "Wait N seconds"
popup/item_0/id = 0
popup/item_1/text = "Wait for input"
popup/item_1/id = 1
script = ExtResource("2_t5t8n")

[node name="SecondsContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/SecondsContainer"]
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
text = "Seconds:"

[node name="Seconds" parent="MarginContainer/VBoxContainer/SecondsContainer" instance=ExtResource("2_afqty")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Number of seconds the text will be stopped"
min_value = 0.01
step = 0.01
value = 0.1
allow_greater = true

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="OKButton" parent="MarginContainer/VBoxContainer/HBoxContainer3" instance=ExtResource("3_mk0y2")]
unique_name_in_owner = true
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "[title]Ok[/title]
Saves all changes and closes the windows."
theme_override_styles/normal = SubResource("StyleBoxTexture_brw25")
theme_override_styles/hover = SubResource("StyleBoxTexture_62ti0")
theme_override_styles/pressed = SubResource("StyleBoxTexture_wobpg")
theme_override_styles/disabled = SubResource("StyleBoxTexture_dbcns")
text = "OK"

[node name="CancelButton" parent="MarginContainer/VBoxContainer/HBoxContainer3" instance=ExtResource("3_mk0y2")]
unique_name_in_owner = true
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "[title]Cancel[/title]
Closes this window without saving any changes."
theme_override_styles/normal = SubResource("StyleBoxTexture_brw25")
theme_override_styles/hover = SubResource("StyleBoxTexture_62ti0")
theme_override_styles/pressed = SubResource("StyleBoxTexture_wobpg")
theme_override_styles/disabled = SubResource("StyleBoxTexture_dbcns")
text = "Cancel"

[connection signal="item_selected" from="MarginContainer/VBoxContainer/HBoxContainer/Type" to="." method="_on_type_item_selected"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer3/OKButton" to="." method="_on_ok_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer3/CancelButton" to="." method="_on_cancel_button_pressed"]
